version/0.14/_sources/api/solver/_autosummary/settings/molecular_weight_1.rst.txt
:orphan:

.. _molecular_weight_1:

molecular_weight
================

.. autoclass:: ansys.fluent.core.solver.settings_231.molecular_weight_1.molecular_weight

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_9>`       Select method for calculating material property.

:ref:`value <value>`                                             'value' child.

========================   ====================================================

.. rubric:: Included in:

======================================================   ============================================

Parent                                                                                        Summary

======================================================   ============================================
:ref:`droplet_particle_child <droplet_particle_child>`       'child_object_type' of droplet_particle.

======================================================   ============================================

